# native_toolchain_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  pubspec.yaml
.github/workflows/: build.yml  flake-update.yml
examples/dart_only/: pubspec.yaml
examples/dart_only/lib/: dart_only_example.dart
examples/dart_only/rust/: Cargo.toml  bindings.h  build.rs
examples/dart_only/test/: dart_only_example_test.dart
examples/dart_only/tool/: ffigen.dart
examples/flutter/: pubspec.yaml
examples/flutter/hook/: build.dart
examples/flutter/integration_test/: widget_test.dart
examples/flutter/rust/: Cargo.toml  bindings.h  build.rs
examples/flutter/rust/src/: lib.rs
lib/: native_toolchain_rs.dart
lib/src/: build_environment.dart  build_runner.dart  config_mapping.dart  crate_info_validator.dart  crate_resolver.dart  exception.dart  process_runner.dart  toml_parsing.dart
native_toolchain_rs/: CHANGELOG.md  pubspec.yaml
native_toolchain_rs/example/: README.md
native_toolchain_rs/lib/: native_toolchain_rs.dart
native_toolchain_rs/test/: crate_info_validator_test.dart  crate_resolver_test.dart  process_runner_test.dart  toml_parsing_test.dart
native_toolchain_rust/: CHANGELOG.md  pubspec.yaml
native_toolchain_rust/example/: README.md
native_toolchain_rust/lib/: native_toolchain_rust.dart
native_toolchain_rust/test/: crate_info_validator_test.dart  crate_resolver_test.dart  exception_test.dart  process_runner_test.dart  toml_parsing_test.dart
test/: crate_info_validator_test.dart  exception_test.dart  toml_parsing_test.dart
(+18 files in other folders)
